Print result implementation